# SRecon-NeRF

./: README.md
data_in/: README.md
dataset/: README.md
nerf_studio_exporter/: exporter_utils.py  texture_utils.py
nerfstudio-method-template/: README.md  pyproject.toml
nerfstudio-method-template/my_semantic/: my_semantic_config.py  my_semantic_dataparser.py  my_semantic_model.py
scripts/: colmap2nerf.py  gen_dataset.py  phrase_raw_data.py  visualize_cameras.py  write_semantic_info_json.py
