[project]
name = "my_semantic"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["my_semantic*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
my-semantic = 'my_semantic.my_semantic_config:my_semantic'
